initial commit, smart contract, front seed

--- a/package.json
+++ b/package.json
@@ -7,16 +7,21 @@
     "test": "test"
   },
   "scripts": {
+    "migrate": "truffle migrate",
+    "compile": "truffle compile",
+    "linter": "solium -d contracts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "testrpc": "docker run -p 8545:8545 --rm --name testrpc -d desmart/testrpc:latest",
-    "kill_testrpc": "docker rm -f testrpc",
-    "start": "npm run testrpc; truffle compile | truffle migrate"
+    "blockchain": "docker run -p 8545:8545 --rm --name testrpc -d desmart/testrpc:latest",
+    "kill": "docker rm -f testrpc",
+    "start": "npm run blockchain; truffle compile | truffle migrate"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "ethereumjs-testrpc": "^6.0.3",
-    "truffle": "^4.1.5"
+    "solium": "^1.1.6",
+    "truffle": "^4.1.5",
+    "zeppelin-solidity": "1.8.0"
   }
 }
