--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "compile": "truffle compile",
     "linter": "solium -d contracts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "blockchain": "docker run -p 8545:8545 --rm --name testrpc -d desmart/testrpc:latest testrpc --network-id 1337 --unlock 0,9",
+    "blockchain": "docker run -p 8545:8545 --rm --name testrpc -d desmart/testrpc:latest testrpc --network-id 1337 --unlock 1",
     "kill": "docker rm -f testrpc",
     "start": "npm run blockchain; truffle compile | truffle migrate"
   },
@@ -20,8 +20,9 @@
   "license": "ISC",
   "dependencies": {
     "ethereumjs-testrpc": "^6.0.3",
+    "request": "^2.85.0",
     "solium": "^1.1.6",
-    "truffle": "^4.1.5",
+    "truffle": "^4.0.0",
     "web3": "^1.0.0-beta.34",
     "zeppelin-solidity": "1.8.0"
   }
