--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "babel-core": "^6.25.0",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-polyfill": "^6.26.0",
@@ -20,6 +21,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-hot-loader": "next",
+    "standard": "^11.0.1",
     "style-loader": "^0.18.2",
     "truffle-contract": "^3.0.5",
     "web3": "^1.0.0-beta.34",
@@ -27,14 +29,11 @@
     "webpack-dashboard": "^0.4.0",
     "webpack-dev-server": "^2.5.0"
   },
-  "devDependencies": {
-    "eslint": "3",
-    "eslint-config-airbnb": "^15.0.1",
-    "eslint-plugin-import": "^2.6.0",
-    "eslint-plugin-jsx-a11y": "^5.0.3",
-    "eslint-plugin-react": "^7.1.0"
-  },
   "scripts": {
-    "start": "webpack-dashboard -- webpack-dev-server --config webpack.config.js"
+    "start": "webpack-dashboard -- webpack-dev-server --config webpack.config.js",
+    "lint": "standard src/*.js"
+  },
+  "standard": {
+    "parser": "babel-eslint"
   }
 }
